--- a/templates/wochenplan.html
+++ b/templates/wochenplan.html
@@ -126,13 +126,18 @@
             border-radius: 6px;
             font-weight: 500;
             font-size: 1em;
+            display: inline-block;
+            margin: 0 auto;
             transition: background-color 0.2s ease;
         }
 
         .zurueck-button:hover {
             background-color: #ffcc80;
         }
-
+        
+        nav {
+            margin: 20px 0;
+        }   
         .einkaufsliste-item {
             display: flex;
             justify-content: space-between;
